--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Page title</title>
+    <link rel="stylesheet" href="./css/index.min.css" />
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
-
-    <script src="index.js" type="module"></script>
+    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <!-- <include src="./partials/example.html"></include> -->
+    <header>
+      <div class="container">
+        <form class="search-form" id="search-form">
+          <input
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder="Search images..."
+          />
+          <button type="submit">Search</button>
+        </form>
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div class="gallery"></div>
+        <button type="button" class="load-more">Load more</button>
+      </div>
+    </section>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
